# rm.rs

./: Cargo.toml
.github/workflows/: rust-clippy.yml
src/: main.rs  prelude.rs
