[package]
name = "rmp"
version = "0.1.0"
edition = "2021"

[dependencies]
inquire = "0.6.2"
clap = { version = "4.4.6", features = ["derive"] }

[profile.release.package.clap]
opt-level = 3

[profile.release]
lto = "fat"
strip = "symbols"
panic = "abort"
codegen-units = 1

[profile.dev]
opt-level = 1
